# target-optiply-v2

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
target_optiply/: __init__.py  auth.py  base_sink.py  client.py  sinks.py  target.py
target_optiply/unified_schemas/: __init__.py  base.py  buy_order_lines.py  buy_orders.py  product_compositions.py  products.py  receipt_lines.py  sell_order_lines.py  sell_orders.py  supplier_products.py  suppliers.py
tests/: __init__.py  test_core.py  test_sinks.py
